<resources>
    <string name="app_name">Weather Checker</string>
    <string name="search_hint">Enter a valid zip code</string>
    <string name="search_button_label">Search</string>
    <string name="search_validation_error">Please enter valid search criteria</string>
    <string name="base_api_url">http://api.wunderground.com/api/{0}/conditions/q/{1}.json</string>
    <string name="api_key">5c50d3a7da5ec314</string>
    <string name="location_label"><b>Location:</b></string>
    <string name="temperature_label"><b>Temperature:</b></string>
    <string name="conditions_label"><b>Conditions:</b></string>
    <string name="invalid_zip">This does not look like a valid zip code.  Try again.</string>
    <string name="invalid_data">We encountered some invalid data.  Try another search.</string>
    <string name="result_freezing">It is below freezing!  Too cold!</string>
    <string name="result_cold">It is pretty cold</string>
    <string name="result_nice">It is nice out!</string>
    <string name="result_hot">It is hot out!</string>
    <string name="radio1">Is It Nice Out?</string>
    <string name="radio2">Search by city</string>
    <string-array name="states_array">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
</resources>
