<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:id="@+id/niceOutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="40sp"
        android:layout_centerHorizontal = "false"
        >
    </TextView>
    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_label"
        android:layout_centerHorizontal = "false"
        android:layout_below = "@+id/niceOutLabel"
        >
    </TextView>
    <TextView
        android:id="@+id/locationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_centerHorizontal = "true"
        android:paddingLeft="15dp"
        android:layout_below = "@+id/niceOutLabel"

        >
    </TextView>
    <TextView
        android:id="@+id/temperatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_label"
        android:layout_centerHorizontal = "false"
        android:layout_below = "@+id/locationLabel"
        >
    </TextView>
    <TextView
        android:id="@+id/temperatureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_centerHorizontal = "true"
        android:paddingLeft="15dp"
        android:layout_below = "@+id/locationValue"
        >
    </TextView>
    <TextView
        android:id="@+id/conditionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conditions_label"
        android:layout_centerHorizontal = "false"
        android:layout_below = "@+id/temperatureLabel"
        >
    </TextView>
    <TextView
        android:id="@+id/conditionsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_centerHorizontal = "true"
        android:paddingLeft="15dp"
        android:layout_below = "@+id/temperatureValue"
        >
    </TextView>
    <ImageView
        android:id="@+id/image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below = "@+id/conditionsLabel"
        android:scaleType="fitXY"
        />
</RelativeLayout>